                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 01-11-2004 updated: Dutch language file (Thnx to joepmeloenx)
  - 01-11-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 31-10-2004 updated: Dutch language file (Thnx to joepmeloenx)
  - 31-10-2004 fixed: album info is not displayed in songs
  - 31-10-2004 updated: German language file
  - 31-10-2004 updated: Romanian language file (Thnx to bompy)
  - 31-10-2004 updated: Portuguese (Brazil) language file (Thnx to wellingtontu)
  - 31-10-2004 updated: Polish language file (Thnx to napek)
  - 31-10-2004 updated: French language file (Thnx to modhack2)
  - 31-10-2004 added: [ 1051008 ] CD-TEXT support (doesn't work on all drives!!!) (Thnx to mog)
  - 31-10-2004 added: <allowoverlay> tag to give skinners the ability to enable/disable the overlay windows via xml file
  - 30-10-2004 added: SF patch #1056254	New simple-stacking mode for video
  - 30-10-2004 added: Possibility for skinners to define their own windows (custom*.xml where * is a number)
  - 30-10-2004 added: SF patch #1056175 FTP server uses /E/ now instead of /E:/
  - 30-10-2004 fixed: Bug in new video code (hopefully!)
  - 30-10-2004 fixed: Thumbs aspect ratio in list controls
  - 30-10-2004 added: Support for the context menu for editting bookmarks in My Videos, My Pictures, My Music
  - 30-10-2004 changed: Rearranged a lot of the My Videos code into a base class
  - 29-10-2004 added: [ 990760 ] My Programs now displays shares in panel (same as other sections)
  - 28-10-2004 updated: Oct 24th compiled mplayer.dll
  - 28-10-2004 changed: removed .nfo from XboxMediaCenter.xml default <videoextensions> and added .rar|.001