@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 02-11-2004 added: my music songs, Shoutcast Top 500 streams share
   - 01-11-2004 updated: Dutch language file (Thnx to joepmeloenx)
   - 01-11-2004 updated: German (Austrian) language file (Thnx to CEOMR)
   - 31-10-2004 updated: Dutch language file (Thnx to joepmeloenx)
